--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Games on web 2022",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
